[FIX] web_editor: fix sidebar overflow issue
Step to reproduce:
- set the odoo backend language to spanish (tested in V16.0)
- go to edit mode
- bug: the sidebar menu overflows, there is a horizontal scrollbar.

Issue:
There was an issue with the dynamic width of the buttons within the
button group.The buttons text was overflowing and causing the sidebar to
overflow.

Solution:
Now we have improved css and now the if the button text is too long it
will be truncated and will show ellipsis.

task-4378522

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -1574,7 +1574,7 @@
             }
             we-button, .o_we_so_color_palette, we-button-group {
                 &.o_we_user_value_widget {
-                    min-width: auto; // ... except for these ones
+                    min-width: 0; // ... except for these ones
                 }
             }
 
@@ -1620,7 +1620,7 @@
                 width: 100%;
             }
             > div {
-                flex: 0 1 auto;
+                flex: 1 1 auto;
                 min-width: 0;
                 margin-top: $o-we-sidebar-content-field-spacing;
             }
@@ -2592,7 +2592,6 @@ we-button:hover .o_we_shape_animated_label > span {
 
 // GRID LAYOUT
 we-button.o_grid {
-    min-width: fit-content;
     padding-left: 4.5px !important;
     padding-right: 4.5px !important;
 }
